--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 * {
     padding: 0;
@@ -10,11 +10,15 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family: 'Roboto Slab',sans-serif;
+    font-family: 'Lato',sans-serif;
 }
 
 header {
     background-color: aqua;
+}
+
+h1 {
+    font-family: 'Oswald', sans-serif;
 }
 
 main {
