--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,10 @@ body {
 }
 
 header {
-    background-color: aqua;
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
 }
 
 h1 {
