testing background color -main-

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ header {
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
+    width: 100%;
 }
 
 h1 {
@@ -26,6 +27,7 @@ h1 {
 
 main {
     flex: 1 0 auto;
+    background-color: blue;
 }
 
 footer {
