--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,14 @@ header {
     box-shadow: 0 3px 3px #3a3a3a;
 }
 
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
 h1 {
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
 }
 
 main {
