--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,20 @@ h1 {
     color: #252525;
 }
 
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: #3a3a3a;
+}
+
 main {
     flex: 1 0 auto;
     background-color: blue;
