--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 3px 3px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
@@ -56,6 +59,20 @@ nav {
     left: 0;
     padding: 0 1rem;
     box-shadow: 0 3px 3px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 main {
