--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,8 +80,18 @@ main {
     margin-top: 47px;
 }
 
-footer {
-    background-color: aquamarine;
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
 
 @media screen and (min-width: 768px) {
