--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,9 +75,14 @@ nav {
 }
 
 main {
-    background-color: white;
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../image/background_image.webp") no-repeat center center/cover;
 }
 
 #social-networks {
