--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@ body {
     font-family: 'Lato',sans-serif;
 }
 
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 header {
     background-color: #ffffff;
     padding: 0 1rem;
@@ -29,12 +35,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit;
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu {
@@ -83,6 +83,22 @@ main {
     height: 600px;
     width: 100%;
     background: url("../image/background_image.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    background-color: rgba(0, 0, 0, 0.9);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 100px;
+    padding-top: 30px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color:#ffffff
 }
 
 #social-networks {
@@ -129,6 +145,11 @@ main {
 
     main {
         margin-top: 80px;
+    }
+
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
