--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,49 @@ main {
     color:#ffffff
 }
 
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#services-health>div,
+#services-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#services p {
+    padding: 0 20px;
+}
+
+#services hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+#circle-cover-bg {
+    background: url("../image/hand_lgbt_trans\ \(1\).jpeg")  no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #social-networks {
     text-align: center;
     padding: 20px 0;
