--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,10 @@ header a {
     color: inherit;
 }
 
+p {
+    margin-right: 0.7rem;
+}
+
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
