--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,47 @@ main {
     padding: 0 20px;
     margin: 5px 0;
 }
-}    
+
+#our-facilitator {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #E4EDF6;
+    margin: 20px 0;
+    padding: 20px 0;
+}
+.our-facilitator {
+    text-align: center;
+    padding: 20px;
+}
+
+.team-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.team-facilitator {
+    text-align: center;
+    max-width: 200px;
+}
+
+.team-facilitator img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.name-facilitator {
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+.text-facilitator {
+    margin: 0;
+    font-size: 14px;
+}
 
 @media screen and (min-width: 768px) {
     nav {
