--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,27 +219,22 @@ main {
     font-size: 14px;
 }
 
-#howtohelp {
+.howtohelp-section .howtohelp {
     background-color: #faf9f6;
-    margin: 40px 0;
-}
-
-.firsthowtohelp {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
-.howtohelp p {
-    padding: 0 20px;
-    margin: 5px 0;
-    font-size: large;
+.howtohelp-section .text-howto {
+    flex: 1;
+    margin-right: 20px;
 }
 
-.firsthowtohelp img {
-    float: left;
-    width: 450px;
-    margin-right: 50px;
+.howtohelp-section .image-howto img {
+    width: 400px;
+    height: auto;
 }
 
 .depoiment-section {
