--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,8 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background: url("../image/background_image.webp") no-repeat center center/cover;
-    position: relative;
+    background: url("../image/background_image\ \(1\).jpg") no-repeat center center/cover;
+    position: relative; 
 }
 
 #cover-text {
@@ -128,7 +128,7 @@ main {
 }
 
 #circle-cover-bg {
-    background: url("../image/hand_lgbt_trans\ \(1\).jpeg")  no-repeat top center / cover;
+    background: url("../image/hand_lgbt_trans\ \(1\).jpg")  no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
